# spark-quickstart

./: README.md  main.ipynb  pyproject.toml  quickstart.ipynb
my.parquet/year=2012/: .part-00000-8e2cc2b0-b634-4284-87a9-4eedc447dd67.c000.snappy.parquet.crc  part-00000-8e2cc2b0-b634-4284-87a9-4eedc447dd67.c000.snappy.parquet
my.parquet/year=2013/: .part-00000-8e2cc2b0-b634-4284-87a9-4eedc447dd67.c000.snappy.parquet.crc  part-00000-8e2cc2b0-b634-4284-87a9-4eedc447dd67.c000.snappy.parquet
src/my_spark/: __init__.py
