[project]
name = "my-spark"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "David Chu", email = "david.chu@dcard.cc" }
]
dependencies = [
    "pyspark>=3.5.0",
    "ipykernel>=6.29.2",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
hello = "my_spark:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/my_spark"]
